copyright date is now dynamic

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Footer Content</h5>
-        <p>Here you can use rows and columns to organize your footer content.</p>
+        <p>Here you can use rows and columns to organize your footer content.
+        <p><img src="footerimg.png" style="height: 150px; width: 150;"></p></p>
+
 
       </div>
       <!-- Grid column -->
@@ -192,7 +194,9 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+  <div class="footer-copyright text-center py-3">©  <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>  Copyright:
     <a href="https://mdbootstrap.com/education/bootstrap/"> juliovasquezdev.com</a>
   </div>
   <!-- Copyright -->
